--- a/leftpad.cabal
+++ b/leftpad.cabal
@@ -29,7 +29,6 @@ executable leftpad
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.4.0,
-		      vector-sized
+    build-depends:    base >=4.16.4.0,
     hs-source-dirs:   app
     default-language: Haskell2010
